fixing bottom spacing

--- a/formattedstyle.css
+++ b/formattedstyle.css
@@ -2,7 +2,7 @@
 
 #about{
 	height: fit-content;
-	width: 100vw;
+	max-width: 100vw;
   /* font-size: 0.1rem; */
 }
 
